fix invisible error message on onboarding
CORE-133

--- a/dapps/onboarding/src/components/profile-create/profile-create.scss
+++ b/dapps/onboarding/src/components/profile-create/profile-create.scss
@@ -58,7 +58,7 @@ profile-create-evan {
     margin: 0 0 0 16px;
     padding: 4px;
 
-    color: $light;
+    color: #ffffff !important;
     background-color: $red !important;
   }
 
